[gd_scene load_steps=11 format=3 uid="uid://c0412vygx3bp3"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_3x5ks"]
[ext_resource type="Script" uid="uid://mvhc7a1wj0b2" path="res://scenes/map_editor/story/stories/types/hero_ability.gd" id="2_b7mt4"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_0glhj"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_nmics"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_1r8ql"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_2pwc6"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_4dxof"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_kmr6d"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_y3eba"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_61ivh"]

[node name="HeroAbility" instance=ExtResource("1_3x5ks")]
script = ExtResource("2_b7mt4")

[node name="player_side" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0glhj")
text = "TR_PLAYER_SIDE"
vertical_alignment = 1

[node name="side" type="LineEdit" parent="player_side" index="0"]
layout_mode = 0
offset_left = 400.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="side_picker_button" type="TextureButton" parent="player_side" index="1"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_nmics")
texture_pressed = ExtResource("5_1r8ql")
texture_hover = ExtResource("6_2pwc6")
texture_focused = ExtResource("6_2pwc6")

[node name="anchor" type="Control" parent="player_side/side_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="player_side/side_picker_button/anchor" index="0" instance=ExtResource("7_4dxof")]

[node name="ban" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0glhj")
text = "TR_DISABLE"
vertical_alignment = 1

[node name="ban_button" type="TextureButton" parent="ban" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_kmr6d")
texture_pressed = ExtResource("9_y3eba")
texture_hover = ExtResource("10_61ivh")
texture_focused = ExtResource("10_61ivh")

[node name="label" type="Label" parent="ban/ban_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0glhj")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="player_side/side" to="." method="_on_text_changed"]
[connection signal="pressed" from="player_side/side_picker_button" to="." method="_on_side_picker_button_pressed"]
[connection signal="pressed" from="ban/ban_button" to="." method="_on_ban_button_pressed"]
